fixed gaps in skills section

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -624,7 +624,7 @@ header {
 
   &__container {
     // border: 1px solid wheat;
-    margin: 3em 0;
+    margin: 6rem 0;
     transition: scale .5s;
 
     &:hover {
